--- a/QC_metrics_for_Peptide_Reports.Rmd
+++ b/QC_metrics_for_Peptide_Reports.Rmd
@@ -3,7 +3,9 @@ title: "**QC metrics Peptide Reports**"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: html_document
 ---
-```{r}
+
+
+```{r, include=FALSE}
  Sys.setenv(RSTUDIO_PANDOC="C:/Program Files/RStudio/bin/pandoc")
 
 ``` 
@@ -15,7 +17,9 @@ output: html_document
 # Description:The present script provides a reliable QC (Quality control) report about peptides in PRIDE Cluster.
 
 # INPUT: The input files must be in the same directory as the script, with the names: 
-# pride_cluster_peptides_ALL.tsv AND pride_cluster_peptides_ALL2.tsv, being the file "pride_cluster_peptides_ALL2.tsv" the new release to comparee.
+# - pride_cluster_peptides_ALL.tsv 
+# - pride_cluster_peptides_ALL2.tsv 
+# being the file "pride_cluster_peptides_ALL2.tsv" the new release to comparee.
 
 ```
 
@@ -135,7 +139,7 @@ if (length(new_data_frame_PEP_v1$modifications[new_data_frame_PEP_v1$modificatio
 
 ### **New peptides**:  
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, warning=FALSE}
 #Create a df to make it easier
 df <- new_data_frame_PEP_v1
 df2 <- new_data_frame_PEP_v2
@@ -164,16 +168,16 @@ df_peptides4 <- data.frame(sequences=df_peptides3$sequence, modifications=df_pep
 if (nrow(df_final[is.na(df_final$PEH.1),])==0) {
     cat("The new release has not gained new peptides\n")
 } else {
-    cat("The new release has  obtained new peptides\n")
+    cat("The new release has obtained new peptides\n")
     kable(df_peptides2)
 }
 
 #To know if the release has lost peptides.
-if (nrow(df_final[is.na(df_final$PEH.2),])!=0) {
+if (nrow(df_final[is.na(df_final$PEH.2),])==0) {
+    cat("The new release has not lost peptides\n")
+} else {
     cat("The new release has lost peptides\n")
     kable(df_peptides4)
-} else {
-    cat("The new release has not lost peptides\n")
 }
 
 ```
@@ -181,7 +185,7 @@ if (nrow(df_final[is.na(df_final$PEH.2),])!=0) {
  
 ### **New peptides spectra:**  
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, warning=FALSE}
 df$peptideNumberSpectra=as.numeric(as.character(df$peptideNumberSpectra))
 df2$peptideNumberSpectra=as.numeric(as.character(df2$peptideNumberSpectra))
 
@@ -212,7 +216,7 @@ if (sum(df_final2$change == 0)) {
 
 ### **New projects**:  
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, warning=FALSE}
 df$numberProjects=as.numeric(as.character(df$numberProjects))
 df2$numberProjects=as.numeric(as.character(df2$numberProjects))
 
@@ -238,7 +242,7 @@ if (sum(df_final_project2$change == 0)) {
 
 ```
 ### **New clusters**
-```{r, echo=FALSE}
+```{r, echo=FALSE, warning=FALSE}
 df$numberClusters=as.numeric(as.character(df$numberClusters))
 df2$numberClusters=as.numeric(as.character(df2$numberClusters))
 
@@ -334,6 +338,9 @@ ggplot((df2), aes(x = value, fill = variable)) +
     geom_bar(stat = "count", position = "dodge") + 
     theme(axis.text.x = element_text(angle = 20, hjust = 0.5, vjust = -0.1)) + 
     guides(fill=FALSE)+
+    labs("Barplot Release1 vs Release 2") + 
+    xlab("Values")+
+    ylab("Frequency")+
     theme(axis.text.x = element_text(angle = 90, hjust = 1))
 ```
 
