--- a/QC_metrics_for_Peptide_Reports.Rmd
+++ b/QC_metrics_for_Peptide_Reports.Rmd
@@ -25,20 +25,19 @@ output: html_document
 
 ```{r, include=FALSE}
 # Upload packages
-
-packages <- c("data.table", "dplyr", "ggplot2", "stringr", "knitr", "markdown", "tidyr", "reshape2")
+packages <- c("data.table", "dplyr", "ggplot2", "stringr", "knitr", "markdown", "tidyr", "reshape2", "rmarkdown")
 if (length(setdiff(packages, rownames(installed.packages()))) > 0) {
     install.packages(setdiff(packages, rownames(installed.packages())))  }
  
 library("data.table"); library("dplyr"); library("ggplot2"); library("stringr"); 
-library("knitr"); library("markdown"); library("tidyr"); library("reshape2")
+library("knitr"); library("markdown"); library("tidyr"); library("reshape2"); library("rmarkdown")
 
 ```
 
 ```{r, include=FALSE}
 #Upload files using getwd
 pride_cluster_peptides_ALL_version1  <- read.delim(file.path(getwd(),"pride_cluster_peptides_ALL.tsv"), comment.char="#")
-pride_cluster_peptides_ALL_version2 <- read.delim(file.path(getwd(),"pride_cluster_peptides_ALL2.tsv"), comment.char="#")
+pride_cluster_peptides_ALL_version2 <- read.delim(file.path(getwd(),"pride_cluster_peptides_ALL2_prueba.csv"), comment.char="#")
 
 #Split of the column in PEP and CPE
 new_data_frame_PEP_v1 = subset(pride_cluster_peptides_ALL_version1, PEH == 'PEP')
@@ -114,9 +113,9 @@ if (length(new_data_frame_PEP_v1$sequence)>length(new_data_frame_PEP_v2$sequence
 cat("Release1:",length(new_data_frame_PEP_v1$modifications[new_data_frame_PEP_v1$modifications == "NULL"]), "\nRelease2:", length(new_data_frame_PEP_v2$modifications[new_data_frame_PEP_v2$modifications == "NULL"]))
 
 if (length(new_data_frame_PEP_v1$modifications[new_data_frame_PEP_v1$modifications == "NULL"])>length(new_data_frame_PEP_v2$modifications[new_data_frame_PEP_v2$modifications == "NULL"])) {
-    cat("Peptides with no-modification reduced:\n", (length(new_data_frame_PEP_v1$modifications[new_data_frame_PEP_v1$modifications == "NULL"])-length(new_data_frame_PEP_v2$modifications[new_data_frame_PEP_v2$modifications == "NULL"])))
+    cat("Peptides with no-modification reduced:", (length(new_data_frame_PEP_v1$modifications[new_data_frame_PEP_v1$modifications == "NULL"])-length(new_data_frame_PEP_v2$modifications[new_data_frame_PEP_v2$modifications == "NULL"])))
 } else if ( length(new_data_frame_PEP_v1$modifications)<length(new_data_frame_PEP_v2$modifications)) {
-    cat("Peptides with no-modification increased:\n", (length(new_data_frame_PEP_v2$modifications[new_data_frame_PEP_v2$modifications == "NULL"])-length(new_data_frame_PEP_v1$modifications[new_data_frame_PEP_v1$modifications == "NULL"])))
+    cat("Peptides with no-modification increased:", (length(new_data_frame_PEP_v2$modifications[new_data_frame_PEP_v2$modifications == "NULL"])-length(new_data_frame_PEP_v1$modifications[new_data_frame_PEP_v1$modifications == "NULL"])))
 } else
     cat("The number of peptides with no-modifications are equals.\n")
 
@@ -129,9 +128,9 @@ if (length(new_data_frame_PEP_v1$modifications[new_data_frame_PEP_v1$modificatio
 cat("Release1: ",length(new_data_frame_PEP_v1$modifications[new_data_frame_PEP_v1$modifications != "NULL"]), "\nRelease2: ", length(new_data_frame_PEP_v2$modifications[new_data_frame_PEP_v2$modifications != "NULL"]))
 
 if (length(new_data_frame_PEP_v1$modifications[new_data_frame_PEP_v1$modifications != "NULL"])>length(new_data_frame_PEP_v1$modifications[new_data_frame_PEP_v2$modifications != "NULL"])) {
-    cat("Peptides with modification reduced:\n", (length(new_data_frame_PEP_v1$modifications[new_data_frame_PEP_v1$modifications != "NULL"])-length(new_data_frame_PEP_v2$modifications[new_data_frame_PEP_v2$modifications != "NULL"])))
+    cat("Peptides with modification reduced:", (length(new_data_frame_PEP_v1$modifications[new_data_frame_PEP_v1$modifications != "NULL"])-length(new_data_frame_PEP_v2$modifications[new_data_frame_PEP_v2$modifications != "NULL"])))
 } else if ( length(new_data_frame_PEP_v1$modifications)<length(new_data_frame_PEP_v2$modifications)) {
-    cat("Peptides with modification increased:\n", (length(new_data_frame_PEP_v2$modifications[new_data_frame_PEP_v2$modifications != "NULL"])-length(new_data_frame_PEP_v1$modifications[new_data_frame_PEP_v1$modifications != "NULL"])))
+    cat("Peptides with modification increased:", (length(new_data_frame_PEP_v2$modifications[new_data_frame_PEP_v2$modifications != "NULL"])-length(new_data_frame_PEP_v1$modifications[new_data_frame_PEP_v1$modifications != "NULL"])))
 } else
     cat("The number of peptides with modifications are equals.\n")
 
@@ -165,27 +164,21 @@ df_peptides3 <- df_final[is.na(df_final$PEH.2),]
 df_peptides4 <- data.frame(sequences=df_peptides3$sequence, modifications=df_peptides3$modifications)
 
 #To know if the new release has obtained new peptides. 
-if (nrow(df_final[is.na(df_final$PEH.1),])==0) {
-    cat("The new release has not gained new peptides\n")
-} else {
+if (nrow(df_final[is.na(df_final$PEH.1),])!=0) {
     cat("The new release has obtained new peptides\n")
-    kable(df_peptides2)
-}
-
-#To know if the release has lost peptides.
-if (nrow(df_final[is.na(df_final$PEH.2),])==0) {
-    cat("The new release has not lost peptides\n")
-} else {
+    kable(df_peptides2, padding = 0)
+} else if (nrow(df_final[is.na(df_final$PEH.2),])!=0) {
     cat("The new release has lost peptides\n")
-    kable(df_peptides4)
-}
+    kable(df_peptides4, padding = 0)
+} else
+   cat("The new release has got the same peptides\n")
 
 ```
 
  
 ### **New peptides spectra:**  
 
-```{r, echo=FALSE, warning=FALSE}
+```{r, echo=TRUE, warning=TRUE}
 df$peptideNumberSpectra=as.numeric(as.character(df$peptideNumberSpectra))
 df2$peptideNumberSpectra=as.numeric(as.character(df2$peptideNumberSpectra))
 
@@ -198,17 +191,53 @@ df_final<- df %>%
     mutate(change = peptideNumberSpectra.2 - peptideNumberSpectra.1)
 
 
+df_peptides_spectra <- df_final[is.na(df_final$PEH.1),]
+df_peptides_spectra2 <- data.frame(sequences=df_peptides$sequence, modifications=df_peptides$modifications, peptideNumberSpectra=df_peptides$peptideNumberSpectra.2)
+
+df_peptides_spectra3 <- df_final[is.na(df_final$PEH.2),]
+df_peptides_spectra4 <- data.frame(sequences=df_peptides$sequence, modifications=df_peptides$modifications, peptideNumberSpectra=df_peptides$peptideNumberSpectra.1)
+
+
 #df_finalX = subset(final_df, change != 'NA') Remove NA from the column
-df_final2 <- subset(df_final, change == 0) # Check the column change to know if there are rows. 
-df_final3 <- data.frame(sequence= df_final2$sequence, modifications= df_final2$modifications, Change=df_final2$change)
+df_final2 <- subset(df_final, change != 0) # Check the column change to know if there are rows. 
+df_final3 <- data.frame(sequence= df_final2$sequence, modifications= df_final2$modifications, SpectraChange=df_final2$change)
 
-
-if (sum(df_final2$change == 0)) {
-    cat("The number of spectras are the same\n")
-} else{
-    cat("The number of Spectras are different\n")
+library(pander)
+if (sum(df_final2$change)!=0 && nrow(df_final[is.na(df_final$PEH.1),])!=0) {
+    cat("The new peptide Spectras are:", "\n")
+    kable(df_peptides_spectra2)
+    cat("The new spectras decresed or incresed are:", "\n")
     kable(df_final3)
-}
+} else if (sum(df_final2$change)==0 && nrow(df_final[is.na(df_final$PEH.1),])!=0) {
+    cat("The new peptide Spectras are:", "\n")
+    pander(df_peptides_spectra2)
+    cat("The rest of spectras are the same.", "\n")
+} else if (sum(df_final2$change)!=0 && nrow(df_final[is.na(df_final$PEH.1),])==0) {
+    cat("The are not new peptide Spectras.", "\n")    
+    cat("The new spectras decresed or incresed are:\n")
+    kable(df_final3)  
+} else
+    cat("The number of spectras are the same", "\n")
+
+
+
+
+if ((sum(df_final2$change)!=0)&&(nrow(df_final[is.na(df_final$PEH.1),])!=0)) {
+    cat("The new peptide Spectras are:\n")
+    kable(df_peptides_spectra2)
+    cat("The new spectras decresed or incresed are:\n")
+    kable(df_final3)
+} else if ((sum(df_final2$change)==0)&&(nrow(df_final[is.na(df_final$PEH.1),])!=0)) {
+    cat("The new peptide Spectras are:\n")
+    kable(df_peptides_spectra2)
+    cat("The rest of spectras are the same.\n")
+} else if (((sum(df_final2$change)!=0)&&nrow(df_final[is.na(df_final$PEH.1),])==0)) {
+    cat("The are not new peptide Spectras:\n")    
+    cat("The new spectras decresed or incresed are:\n")
+    kable(df_final3)
+} else
+    cat("The number of spectras are the same\n")
+
 
 
 ```
@@ -229,16 +258,33 @@ df_final_project<- df %>%
     mutate(change = numberProjects.2 - numberProjects.1)
 
 
-#df_finalX = subset(final_df, change != 'NA') Remove NA from the column
-df_final_project2 <- subset(df_final_project, change == 0) 
-df_final_project3 <- data.frame(sequence= df_final_project2$sequence, modifications= df_final_project2$modifications, Change=df_final_project2$change)
+df_numberProjects <- df_final[is.na(df_final$PEH.1),]
+df_numberProjects2 <- data.frame(sequences=df_numberProjects$sequence,  numberProjects=df_numberProjects$numberProjects.2, peptideNumberSpectra=df_numberProjects$numberProjects.2)
 
-if (sum(df_final_project2$change == 0)) {
+df_numberProjects3 <- df_final[is.na(df_final$PEH.2),]
+df_numberProjects4 <- data.frame(sequences=df_numberProjects$sequence, numberProjects=df_numberProjects$numberProjects.1, peptideNumberSpectra=df_numberProjects$numberProjects.1)
+
+
+#df_finalX = subset(final_df, change != 'NA') Remove NA from the column
+df_final2 <- subset(df_final, change != 0) # Check the column change to know if there are rows. 
+df_final3 <- data.frame(sequence= df_final2$sequence, numberProjects= df_final2$numberProjects, Change=df_final2$change)
+
+
+
+if (sum(df_final2$change) != 0 && nrow(df_final[is.na(df_final$PEH.1),])!=0 ) {
+    cat("The new projects are:\n")
+    kable(df_numberProjects2)
+    cat("The new number of projects decresed or incresed are:\n")
+    kable(df_final3)
+} else if (sum(df_final2$change) == 0 && nrow(df_final[is.na(df_final$PEH.1),])!=0 ) {
+    cat("The new projects are:\n")
+    kable(df_numberProjects2)
+    cat("The number of spectras are the same.\n")
+} else if (sum(df_final2$change) != 0 && nrow(df_final[is.na(df_final$PEH.1),])==0 ) {
+    cat("The new number of projects decresed or incresed are:\n")
+    kable(df_final3)
+} else
     cat("The number of projects are the same\n")
-} else {
-    cat("The number of projects are different\n")
-    kable(df_final_project3)
-}
 
 ```
 ### **New clusters**
@@ -255,16 +301,33 @@ df_final_clusters<- df %>%
     mutate(change = numberClusters.2 - numberClusters.1)
 
 
-#df_finalX = subset(final_df, change != 'NA') Remove NA from the column
-df_final_clusters2 <- subset(df_final_clusters, change == 0) 
-df_final_clusters3 <- data.frame(sequence= df_final_clusters2$sequence, modifications= df_final_clusters2$modifications, Change=df_final_clusters2$change)
+df_cluster <- df_final[is.na(df_final$PEH.1),]
+df_cluster2 <- data.frame(sequences=df_cluster$sequence, modifications=df_cluster$modifications, peptideNumberSpectra=df_cluster$peptideNumberSpectra.2)
 
-if (sum(df_final_clusters2$change == 0)) {
+df_cluster3 <- df_final[is.na(df_final$PEH.2),]
+df_cluster4 <- data.frame(sequences=df_cluster$sequence, modifications=df_cluster$modifications, peptideNumberSpectra=df_cluster$peptideNumberSpectra.1)
+
+
+#df_finalX = subset(final_df, change != 'NA') Remove NA from the column
+df_final2 <- subset(df_final, change != 0) # Check the column change to know if there are rows. 
+df_final3 <- data.frame(sequence= df_final2$sequence, modifications= df_final2$modifications, Change=df_final2$change)
+
+
+
+if (sum(df_final2$change) != 0 && nrow(df_final[is.na(df_final$PEH.1),])!=0 ) {
+    cat("The new clusters are:\n")
+    kable(df_cluster2)
+    cat("The number of clusters decresed or incresed are:\n")
+    kable(df_final3)
+} else if (sum(df_final2$change) == 0 && nrow(df_final[is.na(df_final$PEH.1),])!=0 ) {
+    cat("The new clusters are:\n")
+    kable(df_cluster2)
+    cat("The number of clusters are the same.\n")
+} else if (sum(df_final2$change) != 0 && nrow(df_final[is.na(df_final$PEH.1),])==0 ) {
+    cat("The number of clusters decresed or incresed are:\n")
+    kable(df_final3)
+} else
     cat("The number of clusters are the same\n")
-} else {
-    cat("The number of clusters are different\n")
-    kable(df_final_clusters3)
-}
 
 ```
 
